gcc/testsuite/gcc.dg/noncompile/940510-1.c
struct { int a[]; } x = { 0 };	/* { dg-error "array size missing" } */
